Prof. Rupp accepts position on the advisory board of Advanced Energy Materials
June 30, 2022
Prof. Rupp has accepted a position on the <a href="https://onlinelibrary.wiley.com/page/journal/16146840/homepage/2528_edbd.html" target="_blank">advisory board</a> of Advanced Energy Materials. This reflects Jennifer's and the team's important contributions to the journal and the field at large. Congratulations Jennifer!

Philipp reaches top 10 in dissertation competition
June 23, 2022
Philipp has made it in the Top 10 and finals for Dissertations in Germany for the Natural Science/Tech Division. He will defend his work on glucose micro fuel cells in Berlin in the coming week. Congratulations Philipp, and best of luck!

Thomas awarded MIT Energy Initiative Fellowship
June 23, 2022
Drew has been named a 2022-2023 MIT Energy Fellow, in recognition of his ground-breaking work on opto-ionics. Congratulations Thomas!

Drew awarded Accenture Fellowship
June 23, 2022
Drew has been named a 2021=2-2023 Accenture Fellow. The fellowship will support his work on Li-based neuromorphic computing devices. Congratulations Drew!

Prof. Rupp named Academic Director of TUM Venture ChemSpace
June 30, 2022
Prof. Rupp is now the Academic Directory of TUM Venture ChemSpace, which is dedicated to transforming deep tech innovations at TU Munich into startups. Jennifer is the first woman in this role. 

Prof. Rupp elected to IEEE Neuromorphic Computing Committee
Febuary 7, 2022
Prof. Rupp has been elected to the IEEE Neuomorphic Computing Committee. The committee will serve to support IEEE in fostering and promoting neuromorphic computing hardware as well as research into the underlying physics, electronics, and chemistry. The complete list of the 10 committee members can be found <a href="https://eds.ieee.org/about-eds/governance/technical-committees/neuromorphic-computing-committee" target="_blank">here</a>. 

Group's research featured by DOE Office of Science
January 20, 2022