@@ -164,6 +164,7 @@
 
 
 
+
 <!-- START NEWS BAR -->
 <div class="container-fluid p-0 news-bar text-white">
     <div class="row p-0 m-0">
@@ -171,17 +172,17 @@
             <div class="ecm-primary font-weight-bold text-center align-middle"> NEWS </div>
         </div>
         <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Prof. Rupp accepts position on the advisory board of Advanced Energy Materials </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news1"> Prof. Rupp promoted to full professor </a>
+            <br>
+            <small class="ecm-primary font-italic"> October 26, 2022 </small>
+        </div>
+        <div class="col-sm p-1 bg-dark">
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Prof. Rupp accepts position on the advisory board of Advanced Energy Materials </a>
             <br>
             <small class="ecm-primary font-italic"> June 30, 2022 </small>
         </div>
-        <div class="col-sm p-1 bg-dark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news2"> Philipp reaches top 10 in dissertation competition </a>
-            <br>
-            <small class="ecm-primary font-italic"> June 23, 2022 </small>
-        </div>
         <div class="col-sm p-1 bg-lessdark">
-            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Thomas awarded MIT Energy Initiative Fellowship </a>
+            <a class="text-smaller text-white font-weight-light" href="news/index.html#news3"> Philipp reaches top 10 in dissertation competition </a>
             <br>
             <small class="ecm-primary font-italic"> June 23, 2022 </small>
         </div>
