@@ -101,6 +101,14 @@
 
 <tr><td>
     <a class="anchor" id="news1"></a>
+    <h6 class="mb-1">Prof. Rupp promoted to full professor </h6> 
+    <div class='font-weight-light'>October 26, 2022</div>
+    <p><small>Prof. Rupp has been promoted from associate to full professor at TUM! Congratulations Jennifer!</small></p>
+
+</td></tr>
+
+<tr><td>
+    <a class="anchor" id="news2"></a>
     <h6 class="mb-1">Prof. Rupp accepts position on the advisory board of Advanced Energy Materials </h6> 
     <div class='font-weight-light'>June 30, 2022</div>
     <p><small>Prof. Rupp has accepted a position on the <a href="https://onlinelibrary.wiley.com/page/journal/16146840/homepage/2528_edbd.html" target="_blank">advisory board</a> of Advanced Energy Materials. This reflects Jennifer's and the team's important contributions to the journal and the field at large. Congratulations Jennifer!</small></p>
@@ -108,7 +116,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news2"></a>
+    <a class="anchor" id="news3"></a>
     <h6 class="mb-1">Philipp reaches top 10 in dissertation competition </h6> 
     <div class='font-weight-light'>June 23, 2022</div>
     <p><small>Philipp has made it in the Top 10 and finals for Dissertations in Germany for the Natural Science/Tech Division. He will defend his work on glucose micro fuel cells in Berlin in the coming week. Congratulations Philipp, and best of luck!</small></p>
@@ -116,7 +124,7 @@
 </td></tr>
 
 <tr><td>
-    <a class="anchor" id="news3"></a>
+    
     <h6 class="mb-1">Thomas awarded MIT Energy Initiative Fellowship </h6> 
     <div class='font-weight-light'>June 23, 2022</div>
     <p><small>Drew has been named a 2022-2023 MIT Energy Fellow, in recognition of his ground-breaking work on opto-ionics. Congratulations Thomas!</small></p>
