@@ -97,7 +97,7 @@
           <div class="team-photo-lg-rounded mx-auto" style="background-image:url(rupp.jpg)"></div>
           <h5 class="pt-3 text-center" href="#">Prof. Dr. Jennifer L.M. Rupp, FRSC</h5>
           <p class="text-center">jrupp[at]tum.de</p>
-          <p>Associate Professor of Solid-State Electrolyte Chemistry, TU Munich<br>
+          <p>Professor of Solid-State Electrolyte Chemistry, TU Munich<br>
           Associate Professor (Status Visiting), MIT<br>
           CTO, TUM International Energy Research</p>
           <div class="mt-auto"><a class="btn btn-outline-ecm text-center" href="rupp" role="button">About</a></div>
