@@ -100,7 +100,7 @@
             <div class="p-3">
         <h3 class="mt-0 font-weight-bold">Dr. Jennifer L.M. Rupp, FRSC <small class="text-muted">Principal Investigator</small></h3>
         <p class="font-weight-light">jrupp[at]tum.de<br>
-        <p>Associate Professor of Solid-State Electrolyte Chemistry TU Munich<br>
+        <p>Professor of Solid-State Electrolyte Chemistry TU Munich<br>
           Associate Professor (Status Visiting) MIT<br>
           CTO TUM International Energy Research</p>
       </div>
