@@ -1,3 +1,7 @@
+Prof. Rupp promoted to full professor
+October 26, 2022
+Prof. Rupp has been promoted from associate to full professor at TUM! Congratulations Jennifer!
+
 Prof. Rupp accepts position on the advisory board of Advanced Energy Materials
 June 30, 2022
 Prof. Rupp has accepted a position on the <a href="https://onlinelibrary.wiley.com/page/journal/16146840/homepage/2528_edbd.html" target="_blank">advisory board</a> of Advanced Energy Materials. This reflects Jennifer's and the team's important contributions to the journal and the field at large. Congratulations Jennifer!
